--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://suryansh011.github.io"
+baseURL = "https://suryansh011.github.io/"
 languageCode = "en-us"
 title = "Suryansh-Shishodia"
 theme = "ink-free"
