--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://suryansh011.github.io/"
 languageCode = "en-us"
-title = "Suryansh-Shishodia"
+title = "Suryansh Shishodia"
 theme = "ink-free"
 paginate = 5
 
