--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ copyright = "© Suryansh Singh Shishodia"
   ]
 
   # Github base url
-    github = "https://github.com/suryansh011/"
+#    github = "https://github.com/suryansh011/"
 
 
 # Nav.
