--- a/config.toml
+++ b/config.toml
@@ -54,10 +54,10 @@ name = "About"
 url = "/about"
 weight = 2
 
-[[menu.main]]
-name = "Tags"
-url = "/tags"
-weight = 3
+# [[menu.main]]
+# name = "Tags"
+# url = "/tags"
+# weight = 3
 
 [[params.social]]
 name = "Github"
